@@ -1,0 +1,33 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<spob name="Pirate All Unpresence (Range 2)">
+ <presence>
+  <faction>Pirate</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+ <presence>
+  <faction>Marauder</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+ <presence>
+  <faction>Wild Ones</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+ <presence>
+  <faction>Raven Clan</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+ <presence>
+  <faction>Black Lotus</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+ <presence>
+  <faction>Dreamer Clan</faction>
+  <bonus>-100000.000000</bonus>
+  <range>2</range>
+ </presence>
+</spob>
